# boilerplates

./: .editorconfig  .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  COMPOSE_TEMPLATES_FIX_SUMMARY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  TODO.md  TROUBLESHOOTING.md  WARP.md  check_toggles.py  fix_all_compose.py  fix_all_templates.py  fix_compose_templates.py  flake.nix  network-v1  pyproject.toml  renovate.json  requirements.txt  setup.cfg  test  test.yaml  test_clean_error.py  test_error_display.py
--directory/: compose.yaml
--directory/config/: traefik.yaml
--output-dir/: values.yaml
.github/: FUNDING.yml  copilot-instructions.md  issue_template.md  pull_request_template.md
.github/scripts/: generate_wiki_docs.py  sync-template-version.sh
.github/workflow/: ansible-lint-test.yml
.github/workflows/: ansible-lint-test.yml  ansible-linter-test.yml  codequality-ruff.yaml  codequality-yamllint.yaml  docker-test.yml  docs-update-wiki-variables.yaml  docs-update-wiki.yaml  kube-linter-test.yml  lint.yaml  release-create-cli-release.yaml  release.yaml  renovate-sync-versions.yaml  yaml-lint-test.yml  yaml-lint.yml  yaml-linter-test.yml
.renovate/: CUSTOM_MANAGERS.md  README.md  sync-template-version.sh
.wiki/: Core-Concepts-Defaults.md  Core-Concepts-Libraries.md  Core-Concepts-Templates.md  Core-Concepts-Variables.md  Getting-Started.md  Home.md  Installation.md  Variables-Compose.md  Variables-Helm.md  Variables-Packer.md  Variables-Terraform.md  Variables.md  _Sidebar.md
Raspi/Freenove_RFID_Starter_Kit_for_Raspberry_Pi/: LICENSE.txt
actions/: ntfy-webpush.yml
ansible/: README.md
ansible/checkmk/: README.MD  install-agent.yaml  lookup-rule.yaml
ansible/configuration/: configure-docker-registry-proxy.yaml  configure-smb.yaml
ansible/installation/: external_vars.yml  inst-base-pkg.yaml  inst-core.yaml  inst-docker-ubuntu.yaml  inst-docker-ubuntu.yaml~  inst-docker.yaml  inst-microk8s.yaml  inst-qemu-agent.yaml  inst-vm-core.yaml  inst-wireguard.yaml  inst-zsh.yaml  install-docker-swarm.yaml  int-qemu-agent.yaml
ansible/maintenance/: maint-diskspace  maint-diskspace.yaml  maint-docker-clean.yaml  maint-reboot-required.yaml  maint-reboot.yaml  shutdown.yml
ansible/notification/: notify-discord.yaml
ansible/provisoning/: add_public_keys.yaml  deploy-portainer.yaml
ansible/ubuntu/: maint-diskspace.yaml  upd-apt.yaml
ansible/update/: upd-apt-dist.yaml  upd-apt.yaml
archetypes/: __init__.py  __main__.py
archetypes/compose/: archetypes.yaml  compose.yaml.j2  configs-v1.j2  extension.yaml  network-v1.j2  networks-v1.j2  ports-v1.j2  secrets-v1.j2  service-configs-v1.j2  service-deploy-v1.j2  service-envfile-v1.j2  service-environment-v1.j2  service-labels-v1.j2  service-networks-v1.j2  service-ports-v1.j2  service-resources-v1.j2  service-secrets-v1.j2  service-v1.j2  service-volumes-v1.j2  service-volumes-v2.j2  swarm-v1.j2  traefik-v1.j2  volumes-v1.j2  volumes-v2.j2
cli/: TODO.md  __init__.py  __main__.py
cli/core/: __init__.py  app.py  args.py  collection.py  command.py  config.py  display.py  exceptions.py  helpers.py  library.py  logging.py  models.py  module.py  processor.py  prompt.py  registry.py  render.py  renderers.py  repo.py  section.py  template.py  validators.py  values.py  variable.py  variables.py  version.py
cli/modules/: __init__.py  ansible.py  ci.py  compose.meta.yaml  compose.py  docker.py  github_actions.py  gitlab_ci.py  kestra.py  kubernetes.py  packer.py  terraform.py  vagrant.py
dns-test/: compose.yaml
dns-test/config/: named.conf  named.conf.zones  tsig.key
docker/: README.md
docker-compose/: README.md
docker-compose/Monitoring/: docker-compose.yml
docker-compose/alloy/: .env.example  compose.yaml
docker-compose/ansiblesemaphore/: compose.yaml  docker-compose.yaml  docker-compose.yml
docker-compose/applications/: nextcloud-npm.yaml  pihole.yaml
docker-compose/authelia/: README.md  docker-compose.yml
docker-compose/authentik/: compose.yaml  docker-compose.yaml
docker-compose/authentik-outpost/: compose.yaml
docker-compose/bind9/: Readme.md  compose.yaml  docker-compose.yaml  docker-compose.yml  set-bind.sh
docker-compose/bitwarden/: README.md  post-install-2.sh  post-install.sh
docker-compose/cadvisor/: compose.yaml  docker-compose.yaml  docker-compose.yml
docker-compose/checkmk/: compose.yaml
docker-compose/clamav/: compose.yaml
docker-compose/dockge/: compose.yaml  docker-compose.yaml
docker-compose/duplicati/: README.md  compose.yaml  docker-compose.yaml  duplicati.yaml
docker-compose/frpc/: Dockerfile  compose.yaml  frpc.toml
docker-compose/frps/: .env.example  Dockerfile  compose.yaml  frps.toml
docker-compose/generate-ssl/: Dockerfile
docker-compose/gitea/: .env.example  compose.yaml
docker-compose/gitlab/: README.md  compose.yaml  docker-compose.yaml  gitlab.rb  gitlab_docs.yaml
docker-compose/gitlab-runner/: compose.yaml
docker-compose/grafana/: README.md  compose.yaml  docker-compose.yaml  docker-compose.yml
docker-compose/guacamole/: docker-compose.yml  init-db.sh
docker-compose/heimdall/: compose.yaml  docker-compose.yaml  docker-compose.yml  heimdall.yaml
docs/: code_quality_analysis.md  naming_and_api_improvements.md
docs/wiki/: Home.md  (+9 more)
kestra/: ansible-playbook.yaml  inputs.yaml  variables.yaml  webhook.yaml
scripts/: diagnose_config.py  docs_generate_schema.py  install.sh  sync-template-version.sh
test/: compose.yaml
tests/: __init__.py  test-compose-template-errors.sh  test-compose-templates.sh  test_base_commands.py  test_bash_module.py  test_config_manager.py  test_dependency_matrix.py  test_generate_destinations.py  test_install_script.py  test_module_imports.py  test_prompt_manager.py  test_python_module.py  test_repo.py  test_template.py  test_traefik_template.py  test_variable.py  test_version.py
(+579 files in other folders)
