[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boilerplates"
version = "0.1.0"
description = "CLI tool for managing infrastructure boilerplates"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [ {name = "Christian Lempa"} ]
keywords = ["boilerplates", "cli", "infrastructure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "python-frontmatter>=1.0.0",
    "Jinja2>=3.0",
]

[project.scripts]
boilerplates = "cli.__main__:run"

[tool.setuptools.packages.find]
include = ["cli*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
# PEP 8 compliant line length (88 is Black's default, good balance)
line-length = 88

# Python 3.9+ as minimum version
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PL",     # pylint
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

# Disable specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
]

# Allow auto-fixing for these rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use PEP 8 standard: 4 spaces for indentation
indent-style = "space"

# Use double quotes (consistent with Python conventions)
quote-style = "double"

# Unix line endings
line-ending = "lf"
