[metadata]
name = boilerplates
version = 1.0.0
description = CLI tool for managing infrastructure boilerplates
long_description = file: README.md
license_file = LICENSE
author = Christian Lempa
author_email =
python_requires = >=3.9

[options]
packages = find:
include_package_data = True
install_requires =
    typer[all]>=0.9.0
    rich>=13.0.0
    PyYAML>=6.0
    python-frontmatter>=1.0.0
    Jinja2>=3.0

[options.entry_points]
console_scripts =
    boilerplate = cli.__main__:main
